--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="src/assets/clear-skies-day.png" />
+  <link rel="icon" type="image/svg+xml" href="/assets/clear-skies-day.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thomas Hardy's Weather App</title>
 </head>
