--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="assets/favicon/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta property="og:url" content="https://thomashardyweatherapp.com" />
+  <meta property="og:type" content="website" />
   <title>Thomas Hardy - Weather App</title>
+  <meta property="og:title" content="Thomas Hardy - Weather App" />
+  <meta property="og:image" content="https://thomashardydev.com/assets/image-preview.png" />
+  <meta property="og:description"
+    content="A single day weather app, leveraging the open weather api and a react frontend techstack.">
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 </head>
 
 <body>
