--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website" />
   <title>Thomas Hardy - Weather App</title>
   <meta property="og:title" content="Thomas Hardy - Weather App" />
-  <meta property="og:image" content="https://thomashardydev.com/assets/image-preview.png" />
+  <meta property="og:image" content="https://thomashardyweatherapp.com/assets/image-preview.png" />
   <meta property="og:description"
     content="A single day weather app, leveraging the open weather api and a react frontend techstack.">
   <meta property="og:image:width" content="1200" />
